tests/NormalTests/paczka1/small_fuzzy/19369712.err
Error in line 1: WYPs A336 3,3
Error in line 6: WYPs S480 95,8
Error in line 12: fH6yQnoC S702 6,5
